storage/falcon/Synchronize.cpp
@@ -34,6 +34,7 @@
 #include "Engine.h"
 #include "Synchronize.h"
 #include "Interlock.h"
+#include "Mutex.h"
 
 #ifdef ENGINE
 #include "Log.h"
@@ -106,7 +107,9 @@ void Synchronize::sleep()
 			}
 		}
 #else
+	sleeping = true;
 	sleep (INFINITE);
+	sleeping = false;
 #endif
 #endif
 
@@ -129,10 +132,19 @@ void Synchronize::sleep()
 
 bool Synchronize::sleep(int milliseconds)
 {
+	return sleep(milliseconds, NULL);
+}
+
+bool Synchronize::sleep(int milliseconds, Mutex *callersMutex)
+{
 	sleeping = true;
 
 #ifdef _WIN32
+	if (callersMutex)
+		callersMutex->release();
 	int n = WaitForSingleObject(event, milliseconds);
+	if (callersMutex)
+		callersMutex->lock();
 	sleeping = false;
 	DEBUG_FREEZE;
 
@@ -142,7 +154,10 @@ bool Synchronize::sleep(int milliseconds)
 #ifdef _PTHREADS
 	int ret = pthread_mutex_lock (&mutex);
 	CHECK_RET("pthread_mutex_lock failed, errno %d", errno);
+	if (callersMutex)
+		callersMutex->release();
 	struct timespec nanoTime;
+
 #if _POSIX_TIMERS > 0
 	ret = clock_gettime(CLOCK_REALTIME, &nanoTime);
 	CHECK_RET("clock_gettime failed, errno %d", errno);
@@ -189,6 +204,8 @@ bool Synchronize::sleep(int milliseconds)
 
 	sleeping = false;
 	wakeup = false;
+	if (callersMutex)
+		callersMutex->lock();
 	pthread_mutex_unlock(&mutex);
 	DEBUG_FREEZE;
 
